--- a/src/krasa/editorGroups/SettingsForm.form
+++ b/src/krasa/editorGroups/SettingsForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="krasa.editorGroups.SettingsForm">
-  <grid id="27dc6" binding="root" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="root" layout-manager="GridLayoutManager" row-count="9" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -50,7 +50,7 @@
       </component>
       <vspacer id="c8b9a">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="3b71e" class="javax.swing.JCheckBox" binding="continuousScrolling">
@@ -67,6 +67,15 @@
         </constraints>
         <properties>
           <text value="Prefer latency over flickering on editor opening by IDE, e.g from Project View"/>
+          <toolTipText value="Synchronously get an editor group on opening of a file"/>
+        </properties>
+      </component>
+      <component id="af275" class="javax.swing.JCheckBox" binding="indexOnlyEditorGroupsFileCheckBox">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Index only EditorGroups type files"/>
           <toolTipText value="Synchronously get an editor group on opening of a file"/>
         </properties>
       </component>
