--- a/src/krasa/editorGroups/TabsColors.form
+++ b/src/krasa/editorGroups/TabsColors.form
@@ -13,7 +13,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Override default IDE tab colors"/>
+          <text value="Override IDE default tab colors"/>
           <toolTipText value="Disabling requires restart"/>
         </properties>
       </component>
