--- a/src/krasa/editorGroups/SettingsForm.form
+++ b/src/krasa/editorGroups/SettingsForm.form
@@ -75,7 +75,7 @@
           <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Index only EditorGroups type files"/>
+          <text value="Index only EditorGroups type files (*.egroups)"/>
           <toolTipText value=""/>
         </properties>
       </component>
@@ -105,7 +105,7 @@
       </component>
       <component id="2107e" class="javax.swing.JSeparator">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
