--- a/src/krasa/editorGroups/gui/SettingsForm.form
+++ b/src/krasa/editorGroups/gui/SettingsForm.form
@@ -64,7 +64,7 @@
           <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Prefer latency over flickering on editor opening by IDE, e.g from Project View"/>
+          <text value="Prefer lags over flickering on editor opening by IDE, e.g from Project View"/>
           <toolTipText value="Synchronously get an editor group on opening of a file"/>
         </properties>
       </component>
