--- a/src/main/java/krasa/editorGroups/gui/SettingsForm.form
+++ b/src/main/java/krasa/editorGroups/gui/SettingsForm.form
@@ -101,7 +101,7 @@
           </component>
         </children>
       </grid>
-      <grid id="d20b8" layout-manager="GridLayoutManager" row-count="11" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d20b8" layout-manager="GridLayoutManager" row-count="12" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -202,6 +202,15 @@
               <toolTipText value=""/>
             </properties>
           </component>
+          <component id="86bcb" class="javax.swing.JCheckBox" binding="compactTabs">
+              <constraints>
+                <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              </constraints>
+              <properties>
+                <text value="Compact Tabs"/>
+                <toolTipText value=""/>
+              </properties>
+            </component>
         </children>
       </grid>
       <component id="14585" class="javax.swing.JCheckBox" binding="showPanel">
